Feat: create route, controller, view for U2 - tests passing

--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -1,1 +1,8 @@
 
+<h3><%= @professor.name %></h3>
+<p>Age: <%= @professor.age %></p>
+<p>Specialty: <%= @professor.specialty %></p>
+<p>Students:
+  <% @professor.students.each do |student| %>
+  <%= student.name%>
+  <% end %>
