Feat: update professor index view to include average age U4 - tests passing

--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -3,4 +3,5 @@
   <h3><%= professor.name %></h3>
   <p>Age: <%= professor.age %></p>
   <p>Specialty: <%= professor.specialty %></p>
+  <p>Average Age: <%= professor.avg_student_age %></p>
 <% end %>
