Feat: add controller, view edits for alphabetical index

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,9 @@
 <h1> Student Index </h1>
 <h3> With Count of Professors </h3>
-<% @students.each do |student| %>
+<div id = "student_index">
+<% @students.each_with_index do |student, index| %>
+  <div class="student">
   <p><%= "#{student.name}: #{student.professor_count}"%></p>
+  </div>
 <% end %>
+</div>
